--- a/esportswebpage/resources/css/style.css
+++ b/esportswebpage/resources/css/style.css
@@ -1,3 +1,6 @@
+body{
+	font-family: 'Karla' , sans-serif;
+}
 .header {
 	display: flex;
 	flex-direction: column;
@@ -13,16 +16,77 @@ margin: 0 10%;
   display: inline-block;
   padding: 10px 10px;
 }
-.mission-img{
-	max-height: 200px;
-	width: 100%;
-	object-fit: cover;
-}
 .mission {
+	height: 400px;
+	background-image: url("../mission-img.jpg");
+	background-size: cover;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 }
-.mission p {
-	display: inline-block;
+.missioncontainer{
+	text-align: center;
+	background-color: white;
+	width: 100%;
+}
+.E-Sportscontainer h2 {
+	text-align: center;
+}
+.E-Sportscontainer p {
+	text-align: center;
+}
+.sport {
+	display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+	
+}
+.allsports{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center;
+}
+.sport img{
+	margin-left: auto;
+	margin-right: auto;
+	width: 250px;
+	padding: 10px;
+	height: 250px;
+	display: cover;
+}
+.sport span {
+	padding: 5px;
+	min-width: 240px;
+	text-align: center;
+	font-weight: bold;
+}
+.Roster h2 {
+	text-align: center;
+	font-weight: bold;
+}
+.Rostermembers {
+	
+	height: 400px;
+	background-image: url("../esportscrowd.jpg");
+	background-size: cover;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.Rostermembers img {
+	width: 200px;
+	height: 300px;
+}
+.Rostermembers figcaption {
+	font-size: 20px;
+	text-align: center;
+	font-weight: bold;
+}
+footer {
+	text-align: center;
+	font-weight: bold;
 }
